cleaned up and used kramdown for formatting of posts

--- a/Rules
+++ b/Rules
@@ -21,7 +21,7 @@ compile 'blog/*' do
   if item.binary?
     # don’t filter binary items
   else
-    filter :erb
+    filter :kramdown
     layout 'blog'
   end
 end
